added testcases